# radioft

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CMakeLists.txt  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
docs/: conf.py  index.rst
docs/api-reference/dft/: dft.rst  index.rst
docs/api-reference/finufft/: autograd.rst  finufft.rst  index.rst
docs/changes/: 10.bugfix.rst  10.enhancement.rst  12.feature.rst  13.maintenance.rst  19.enhancement.rst  20.maintenance.rst  23.enhancement.rst  27.maintenance.rst  31.maintenance.rst  33.bugfix.rst  5.feature.rst  6.optimization.rst
docs/developer-guide/: contributions.md  getting-started.md  index.rst
docs/user-guide/: getting-started.md  index.rst
radioft/: __init__.py  _version.py
radioft/cuda/: __init__.py
radioft/cuda/kernels/: cuda_phase_kernel.cu  cuda_phase_kernel32.cu
radioft/dft/: dft.py  utils.py
radioft/finufft/: __init__.py  finufft.py
radioft/utils/: coordinates.py  sizes.py
src/radioft/: __init__.py  version.py
src/radioft/cuda/: __init__.py  cuda_bindings.cpp
src/radioft/cuda/kernels/: cuda_phase_kernel32.cu
src/radioft/dft/: __init__.py  dft.py  utils.py
src/radioft/finufft/: __init__.py  autograd.py  finufft.py
src/radioft/utils/: _typing.py  coordinates.py  sizes.py
tests/: conftest.py  test_hybrid_dft.py
