[build-system]
requires = [
  "scikit-build-core>=0.8.0",
  "setuptools_scm[toml]>=8",
  "pybind11>=2.12.0",
  "torch>=2.0.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "radioft"
dynamic = ["version"]
description = "Fourier transform implementations for radio interferometry applications."
readme = "README.rst"

authors = [
  { name = "Kevin Schmitz", email = "kevin2.schmitz@tu-dortmund.de" },
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" },
]
maintainers = [
  { name = "Kevin Schmitz", email = "kevin2.schmitz@tu-dortmund.de" },
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" },
]

license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]

requires-python = ">=3.11"

dependencies = [
  "torch>=2.7.0",
]

[dependency-groups]
tests = ["h5py", "pytest >= 7.0", "pytest-cov", "tomli"]
dev = [
  "jupyter",
  "pre-commit",
  "toml",
  {include-group = "tests"},
]

[tool.setuptools_scm]
write_to = "src/radioft/_version.py"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/radioft"]
cmake.version = ">=3.18"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "70;75;80;86;89;90"

[tool.coverage.run]
omit = [
  "radioft/version.py",
  "radioft/_version.py",
  "docs/*",
  "**/__init__.py",
  "tests/*",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["tests", "examples"]

[tool.ruff.lint]
extend-select = [
  "I",  # isort
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = ["B905"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["radioft"]

[tool.towncrier]
    package = "radioft"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"
    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/radionets-project/radioft/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.datamodel]
        name = "Data Model Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""
